--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <div class="jumbotron">
     <h1 class="display-4">Grocery App</h1>
-    <p class="lead">This is a simple application to keep track of groceries, their prices, and whether or not they have
+    <p class="lead">This is a simple application to keep track of burgers, their prices, and whether or not they have
         already been purchased.</p>
 </div>
 <div class="container">
@@ -11,50 +11,40 @@
                     <label for="product">Product Name</label>
                     <input type="text" class="form-control" id="product">
                 </div>
-                <div class="form-group">
-                    <label for="quantity">quantity</label>
-                    <input type="number" class="form-control" id="quantity">
-                </div>
-                <div class="form-group">
-                    <label for="cost">Price</label>
-                    <input type="number" class="form-control" id="cost">
-                </div>
-                <button type="submit" id="addGrocery" class="btn btn-primary">Add Grocery</button>
+            
+                <button type="submit" id="addBurger class="btn btn-primary">Add Your fave Burger</button>
             </form>
         </div>
     </div>
     <hr>
     <div class="row">
         <div class="col-md-6">
-            <ul id="notPurchased" class="list-group">
-                <h2>Not Purchased</h2>
-                {{#each groceries}}
-                {{#unless this.purchased}}
+            <ul id="notDevoured" class="list-group">
+                <h2>Not Devoured</h2>
+                {{#each burgers}}
+                {{#unless this.devoured}}
                 <li id="{{ this.id }}" class="list-group-item">
                     <div class="d-flex w-100 justify-content-between">
                         <h5 class="mb-1">{{ this.name }}</h5>
-                        <button data-name="{{ this.name }}" data-quantity="{{ this.quantity }}"
-                            data-cost="{{ this.cost }}" class="purchase btn btn-success">✓</button>
+                        <button data-name="{{ this.name }}" class="devour btn btn-success">✓</button>
                     </div>
-                    <p class="mb-1">Quantity: {{ this.quantity }}</p>
-                    <small>Price: ${{ this.cost }}</small>
+                    
                 </li>
                 {{/unless}}
                 {{/each}}
             </ul>
         </div>
         <div class="col-md-6">
-            <ul id="purchased" class="list-group">
-                <h2>Purchased</h2>
-                {{#each groceries}}
-                {{#if this.purchased}}
+            <ul id="devoured" class="list-group">
+                <h2>Devoured</h2>
+                {{#each burgers}}
+                {{#if this.devoured}}
                 <li id="{{ this.id }}" class="list-group-item">
                     <div class="d-flex w-100 justify-content-between">
                         <h5 class="mb-1">{{ this.name }}</h5>
-                        <button class="btn btn-danger remove">X</button>
+                        <button class="btn btn-danger remove">Delete this burger</button>
                     </div>
-                    <p class="mb-1">Quantity: {{ this.quantity }}</p>
-                    <small>Price: ${{ this.cost }}</small>
+                   
                 </li>
                 {{/if}}
                 {{/each}}
