added axios cdn

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,11 +8,11 @@
         <div class="col-md-12">
             <form>
                 <div class="form-group">
-                    <label for="product">Product Name</label>
-                    <input type="text" class="form-control" id="product">
+                    <label for="burger">burger Name</label>
+                    <input type="text" class="form-control" id="burger">
                 </div>
             
-                <button type="submit" id="addBurger class="btn btn-primary">Add Your fave Burger</button>
+                <button type="submit" id="addBurger" class="btn btn-primary">Add Your fave Burger</button>
             </form>
         </div>
     </div>
